Updated documentation and sample config file

--- a/bunny.conf
+++ b/bunny.conf
@@ -1,13 +1,13 @@
 {
   "broker": "amqp://guest:guest@localhost:5672/",
   "consumer_id": "bunny-worker",
-  "consumer_exchange": "nagios_checks",
+  "consumer_exchange": "nagios",
   "consumer_exchange_type": "direct",
   "consumer_queue": "nagios_checks",
-  "consumer_binding_key": "",
-  "publisher_exchange": "nagios_results",
+  "consumer_binding_key": "nagios_checks",
+  "publisher_exchange": "nagios",
   "publisher_exchange_type": "direct",
-  "publisher_routing_key": "",
+  "publisher_routing_key": "nagios_results",
   "retry_wait_time": 3,
   "append_worker_hostname": true,
   "debug": false
