Added debugging verbosity control with DebugLevel

--- a/bunny.conf
+++ b/bunny.conf
@@ -10,5 +10,5 @@
   "publisher_routing_key": "nagios_results",
   "retry_wait_time": 3,
   "append_worker_hostname": true,
-  "debug": false
+  "debug_level": 0
 }
